--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -14,12 +14,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Bootstrap CSS -->
-        <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+        <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
         
         <script src="https://kit.fontawesome.com/2aa7d1e097.js" crossorigin="anonymous"></script>
         <!-- <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script> -->
+        <title>Base</title>
         {% block head%}
         {% endblock %}
     </head>
@@ -85,7 +86,6 @@
                     {% block body %}
                     {% endblock %}
                 </div>
-                
                 <div class="footer">
                     <p>Copyright &copy; {{session['year']}} Sekolah Daarul Jannah</p>
                 </div>
@@ -94,11 +94,8 @@
 
             <!-- footer -->
             
-
-           
         </div>
-
-            
+        
     </body>
 </html>
 
