--- a/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
@@ -102,12 +102,33 @@
                         <a href="{{url_for('ubah_pegawai', nip = pegawai['nip'])}}">
                             <p class="ch-btn btn">Ubah Data Pegawai</p>
                         </a>
-                        <a href="{{url_for('hapus_pegawai', nip = pegawai['nip'])}}">
-                            <p class="del-btn btn">Hapus Data Pegawai</p>
-                        </a>
+                        <button href="{{url_for('hapus_pegawai', nip = pegawai['nip'])}}" class="del-btn btn" style="color: white;" onclick="open_modal()">
+                            <p >Hapus Data Pegawai</p>
+                        </button>
                 </div> 
                 </div>
+            </div>
+            <div class="pop-up" role="alert">
+                <div class="modal">
+                    <!-- <i class="fa-solid fa-xmark close-btn" id="confirm"></i> -->
+                    <p id="confirm">Apakah Anda yakin untuk menghapus data siswa?</p>
+                    <div class="modal-buttons row">
+                        <a href="{{ url_for('detail_pegawai', nip = pegawai['nip']) }}" class="btn-no">
+                            <p>Batal</p></a>
+                        <a href="{{ url_for('hapus_pegawai', nip = pegawai['nip']) }}" class="btn-yes">
+                            <p>Hapus</p></a>
+                    </div>
+                </div>
             </div> 
+            <script>
+                // Get the modal
+                function open_modal(){
+
+                    var modal = document.getElementsByClassName("pop-up")[0];
+                    modal.style.display = "block";
+    
+                }
+            </script>
             <script src="{{url_for('static', filename='Javascript/datpeg_active_class.js')}}">   </script>   
             {% endblock %}
 
