--- a/Sistem Keuangan Daarul Jannah/templates/tabelpegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelpegawai.html
@@ -44,7 +44,7 @@
             
             <div class="table" id="data_pegawai">
                 <table class="shadow coll">
-                    <tr>
+                    <tr class="first">
                         <th>NIP</th>
                         <th>Nama Pegawai</th>
                         <th>Jenis Kelamin</th>
