--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatapegawai.html
@@ -19,7 +19,8 @@
                 <div class="container">
                     <div class="card">
                         <div class="row fl-stretch">
-                            <img id="pic" class="ft-pgw" style="margin-right:5%; margin-left:5%"/>
+                            {% set foto_siswa = "foto_siswa/default.jpg" %}
+                            <img id="pic" src="{{url_for('static', filename=foto_siswa)}}" class="ft-pgw" style="margin-right:5%; margin-left:5%"/>
                             <!-- <img src="../static/foto_siswa/1549425553128.png" > -->
                             <div >
                                 <div class="row detail" style="margin-bottom:10px">
@@ -115,7 +116,7 @@
                                                 <option disabled selected hidden>
                                                     Pilih Jenis Kelamin
                                                 </option>
-                                                <option value="Laki-Laki">
+                                                <option value="Laki-laki">
                                                     Laki-Laki
                                                 </option>
                                                 <option value="Perempuan">
@@ -151,13 +152,13 @@
                                         <input type="text" id="password" placeholder="Masukkan Password" name="password" minlength="8" disabled>
                                     </div>
                                 </div>
-                                <div class="row detail" style="margin-bottom:10px">
+                                <!-- <div class="row detail" style="margin-bottom:10px">
                                     <h4 class="in-1">Foto</h4>
                                     <h4>:</h4>
                                     <div >
                                         <input type="file" name="foto_pegawai" oninput="pic.src=window.URL.createObjectURL(this.files[0])" required>
                                     </div>
-                                </div>
+                                </div> -->
                                 
                             </div>
                                 
