--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -31,7 +31,7 @@
             <div class="side"> 
                 <div class="sidebar">
                     <img src="../static/Image/logo-sekolah.png" class="side-logo">
-                    <p>Sistem Pembayaran Sekolah Islam Plus Daarul Jannah</p>
+                    <p>Sistem Informasi Pendataan Tagihan Siswa Daarul Jannah</p>
                     
                 </div>
                 <div class="menu">
