--- a/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="card">
                     <div class="row fl-stretch">
-                        {% set foto_pegawai = "foto_pegawai/" + pegawai['foto_path'] %}
+                        {% set foto_pegawai = "foto_siswa/default.jpg" %}
                         <img src="{{url_for('static', filename=foto_pegawai)}}" class="ft-pgw" alt="foto orang" style="margin-right:5%; margin-left:5%">
                         <div >
                             <div class="row detail" style="margin-bottom:10px">
