--- a/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="card">
                     <div class="row fl-stretch">
-                        {% set foto_siswa = "foto_siswa/" + siswa['foto_path'] %}
+                        {% set foto_siswa = "foto_siswa/default.jpg" %}
                         <img src="{{url_for('static', filename=foto_siswa)}}" class="ft-siswa" alt="foto orang" style="margin-right:5%; margin-left:5%">
                         <div >
                             <div class="row detail">
