--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatapegawai.html
@@ -236,7 +236,7 @@
                                                     <option value="Office Boy">
                                                         Office Boy
                                                     </option>
-                                                {% elif pegawa.unit == "Satpam" %}
+                                                {% elif pegawai.unit == "Satpam" %}
                                                     <option value="TK" >
                                                         TK
                                                     </option>
