--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -10,6 +10,7 @@ html, body {
 
 select,input{
     font-family: "Poppins", sans-serif !important;
+    font-size: 0.9vw;
 }
 
 .parent {
@@ -82,8 +83,8 @@ select,input{
 }
 
 .side-logo{
-    width: 100px;
-    height: 100px;
+    width: 5vw;
+    height: 5vw;
 }
 .user{
     font-size: 100px; 
@@ -105,6 +106,7 @@ select,input{
 .menu i{
     font-size: 20px;
     padding-top: 10px;
+    font-size: 1.5vw;
 }
 
 .btn-wrap{
@@ -178,8 +180,8 @@ nav a h5{
 }
 
 .foto-profil{
-    width:50px; 
-    height:50px;
+    width:3vw; 
+    height:3vw;
     border-radius:100px;
 }
 
@@ -360,7 +362,7 @@ nav a h5{
     font-weight: bolder;
     padding-left: 5px;
     background-color: transparent;
-    width: 95%;
+    width: 99%;
     font-size: 1vw;
 }
 
@@ -480,14 +482,14 @@ th {
 }
 
 .ft-siswa{
-    width: 150px;
-    height: 200px;
+    width: 12vw;
+    height: 16vw;
     border-radius: 15px;
 }
 
 .ft-pgw{
-    width: 210px;
-    height: 280px;
+    width: 12vw;
+    height: 16vw;
     border-radius: 15px;
 }
 
@@ -528,7 +530,7 @@ th {
 }
 
 .detail h4{
-    padding: 5px;
+    padding: 0.5vw;
     
 }
 
@@ -619,7 +621,6 @@ th {
     padding: 2.5vw;
     background: #FFF;
     border-radius: 10px;
-    /* border-radius: .25em .25em .4em .4em; */
     text-align: center;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     position: absolute;
