--- a/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
@@ -26,32 +26,32 @@
                                 <img src="{{url_for('static', filename=foto_siswa)}}" class="ft-siswa" alt="foto orang" style="margin-right:2%;">
                                 <div class="column">
                                     <div class="row detail">
-                                        <h4>Nama</h4>
+                                        <h4 class="indikator">Nama</h4>
                                         <h4>:</h4>
                                         <p>{{siswa.nama_siswa}}</p>
                                     </div>
                                     <div class="row detail">
-                                        <h4>Kelas</h4>
+                                        <h4 class="indikator">Kelas</h4>
                                         <h4>:</h4>
                                         <p>{{siswa.kelas}}</p>
                                     </div>
                                     <div class="row detail">
-                                        <h4>Jenis Kelamin</h4>
+                                        <h4 class="indikator">Jenis Kelamin</h4>
                                         <h4>:</h4>
                                         <p>{{siswa.jenis_kelamin}}</p>
                                     </div>
                                     <div class="row detail">
-                                        <h4>Status</h4>
+                                        <h4 class="indikator">Status</h4>
                                         <h4>:</h4>
                                         <p>{{siswa.status}}</p>
                                     </div>
                                     <div class="row detail">
-                                        <h4>NIS</h4>
+                                        <h4 class="indikator">NIS</h4>
                                         <h4>:</h4>
                                         <p>{{siswa.nis}}</p>
                                     </div>
                                     <div class="row detail">
-                                        <h4>NISN</h4>
+                                        <h4 class="indikator">NISN</h4>
                                         <h4>:</h4>
                                         <p>{{siswa.nisn}}</p>
                                     </div>
