--- a/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
@@ -21,7 +21,7 @@
                     <div class="column" >
                         <h4 class="text">Data Siswa/i</h4>
                         <div class="card-nosh" style="margin-right:10px">
-                            <div class="row " style="align-items:center;justify-content:center;">
+                            <div class="row " style="align-items:center;justify-content:space-around;">
                                 {% set foto_siswa = "foto_siswa/default.jpg" %}
                                 <img src="{{url_for('static', filename=foto_siswa)}}" class="ft-siswa" alt="foto orang" style="margin-right:2%;">
                                 <div class="column">
