--- a/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
@@ -23,11 +23,11 @@
                             <h4 class="text">Data Siswa/i</h4>
                             <div class="card-nosh" style="margin-right:10px">
                                 <div class="row " 
-                                style="align-items:center;justify-content:space-around;"
+                                style="align-items:center;justify-content:space-evenly;"
                                 >
                                     {% set foto_siswa = "foto_siswa/default.jpg" %}
                                     <div>
-                                        <img src="{{url_for('static', filename=foto_siswa)}}" class="ft-siswa" alt="foto orang" style="margin-right:2%;">
+                                        <img src="{{url_for('static', filename=foto_siswa)}}" class="ft-siswa" alt="foto orang" >
                                     </div>
                                     <div class="column">
                                         <div class="row detail">
