--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -49,13 +49,14 @@
                                     <h5 >Data Siswa/i</h5>
                                 </a>
                             </li>
+                            {% if session['otoritas'] == "Admin"%}
                             <li>
                                 <a href="/manajemen_pegawai" class="li-menu" id="data_staf">
                                     <i class="fa-solid fa-address-book"></i>&emsp;
                                     <h5>Data Staf</h5>
                                 </a>
                             </li>
-                            
+                            {% endif %}
                         </ul>
                     </nav>
                     
