--- a/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
@@ -111,7 +111,7 @@
             <div class="pop-up" role="alert">
                 <div class="modal">
                     <!-- <i class="fa-solid fa-xmark close-btn" id="confirm"></i> -->
-                    <p id="confirm">Apakah Anda yakin untuk menghapus data siswa?</p>
+                    <p id="confirm">Apakah Anda yakin untuk menghapus data pegawai?</p>
                     <div class="modal-buttons row">
                         <a href="{{ url_for('detail_pegawai', nip = pegawai['nip']) }}" class="btn-no">
                             <p>Batal</p></a>
