--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatapegawai.html
@@ -336,10 +336,19 @@
                                         <h4>:</h4>
                                         <div class="dtl-style">
                                             <select name="otoritas" id="otoritas" onchange="dynamicOptionDataPegawai()" required>
-                                                <option value="" selected disabled>Pilih Otoritas</option>
-                                                <option value="Admin">Admin</option>
+                                                {% if pegawai.otoritas == "Admin" %}
+                                                <option value="Admin" selected>Admin</option>
                                                 <option value="Staff">Staff</option>
                                                 <option value="None">None</option>
+                                                {% elif pegawai.otoritas == "Staff" %}
+                                                <option value="Admin">Admin</option>
+                                                <option value="Staff" selected>Staff</option>
+                                                <option value="None">None</option>
+                                                {% else %}
+                                                <option value="Admin">Admin</option>
+                                                <option value="Staff">Staff</option>
+                                                <option value="None" selected>None</option>
+                                                {% endif %}
                                             </select>
                                         </div>
                                     </div>
