--- a/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             
-            <div class="table" id="data_siswa">
+            <div class="table" id="tabel_siswa">
                 <table class="shadow coll">
                     <tr>
                         <th>NIS</th>
