--- a/flask-app/templates/tabelsiswa.html
+++ b/flask-app/templates/tabelsiswa.html
@@ -20,6 +20,7 @@
                 <div class="filter-kiri">
                     <select class="filter-tingkat" id="filter-tingkat" onchange="filterTingkat()" title="Filter Tingkat Pendidikan">
                         <option value="Tingkat" disabled selected hidden>Tingkat</option>
+                        <!-- <option value="">Semua Tingkat</option> -->
                         <option value="TK">TK</option>
                         <option value="SD" >SD</option>
                         <option value="SMP">SMP</option>
@@ -35,6 +36,7 @@
                     </a>
                     <div class="search-bar">
                         <select id="search-bar-filter" onchange="searchBarClear()">
+                            <!-- <option value="">Semua Tingkat</option> -->
                             <option value="NIS" selected>NIS</option>
                             <option value="Nama">Nama</option>
                             <option value="Kelas">Kelas</option>
