--- a/flask-app/templates/pembayaran.html
+++ b/flask-app/templates/pembayaran.html
@@ -15,7 +15,7 @@
         
         <h1 class="page-title">Data Pembayaran Siswa/i Sekolah Daarul Jannah</h1>
         <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
-        <form action="" method="post" enctype="multipart/form-data">
+        <!-- <form action="" method="post" enctype="multipart/form-data"> -->
             <div class="container">
                 <div class="card">
                     <div class="row fl-stretch" style="margin-bottom:2%">
@@ -67,12 +67,13 @@
                         </div>
                         <div class="column">
                                 <h4 class="text" style="margin-left:10px">Input Data Rincian Tagihan </h4>
+                            <form action="" method="post">
                                 <div class="card-nosh" style="margin-left:10px">
                                     <div class="detail-tagihan">
                                         <div>
                                             <p>Periode Pembayaran :</p>
-                                            <select id="periode" name="periode_bulan" required>
-                                                <option disabled selected id="default">Pilih Bulan</option>
+                                            <select id="periode" name="periode_bulan" required="required">
+                                                <option disabled hidden selected id="default" value="">Pilih Bulan</option>
                                                 <option value="Januari" id="1">Januari</option>
                                                 <option value="Februari" id="2">Februari</option>
                                                 <option value="Maret" id="3">Maret</option>
@@ -86,8 +87,8 @@
                                                 <option value="November" id="11">November</option>
                                                 <option value="Desember" id="12">Desember</option>
                                             </select>
-                                            <select id="tahun_ajaran" name="periode_ta" required>
-                                                <option disabled selected>Pilih Tahun Ajaran</option>
+                                            <select id="tahun_ajaran" name="periode_ta" required="required">
+                                                <option disabled hidden selected value="">Pilih Tahun Ajaran</option>
                                                 <option>{{session['year']}}/{{session['year']+1}} Ganjil</option>
                                                 <option>{{session['year']}}/{{session['year']+1}} Genap</option>
                                             </select>
@@ -150,22 +151,24 @@
                                             <!-- <button class="tgh-btn btn">Tambah Tagihan</button> -->
                                         </div>
                                     </div>
+                                    
+                                <div class="row cmd-btn" style="justify-content:flex-end;">
+                                    <a>
+                                        <input type="submit" class="p-btn btn" value="Simpan Pembayaran">
+                                        <!-- <p >Simpan Pembayaran</p> -->
+                                    </a>
                                 </div>
-                            
+                                </div>
+                            </form>
                         </div>
                         
                     </div>
-                    <div class="row cmd-btn" style="justify-content:flex-end;">
-                        <a>
-                            <input type="submit" class="p-btn btn" value="Simpan Pembayaran">
-                            <!-- <p >Simpan Pembayaran</p> -->
-                        </a>
-                    </div>
+                    
                     
                 </div>
                 
             </div>
-        </form>
+        <!-- </form> -->
         
         {% endblock %}
     </body>
